# akos

./: README!!!!!!!
argparse/: CMakeLists.txt  Makefile  argparse.c  argparse.h  client.c  compile-deps.sh
doom-server/: Makefile  ini
doom-server/include/: game.h  logic.h  memmove.h
doom-server/src/: clients.c  main.c  memmove.c
ipc/: Makefile  main.c
matrix/: Makefile  main.c
replace/: CMakeLists.txt  Makefile  main.c  readme
shell/: Comments.txt  Makefile  README  argparse.c  argparse.h  exec.c  main.c  memmove.c  shell_structs.h
shell/include/: argparse.h  builtins.h  exec.h  memmove.h  shell_structs.h
shell/src/: argparse.c  builtins.c  exec.c  getss.c  main.c  memmove.c
signal/: main.c
task-0/: Makefile  README  calc.sh  main.c  res.txt
task-1/: CMakeLists.txt  Makefile  client.c  getss.c  getss.h
task-2/: CMakeLists.txt  Makefile  main.c  readme
